# agile_grasp

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  svm_032015_linear_20_20_same
include/agile_grasp/: antipodal.h  finger_hand.h  grasp_hypothesis.h  grasp_localizer.h  hand_search.h  handle.h  handle_search.h  learning.h  localization.h  plot.h  quadric.h  rotating_hand.h
launch/: baxter_grasps.launch  single_camera_grasps.launch
msg/: CloudSized.msg  Grasp.msg  Grasps.msg
rviz/: single_camera.rviz
screenshots/: screenshot-1426215192.cam  screenshot-1426215220.cam  screenshot-1426215246.cam  screenshot-1426215405.cam  screenshot-1426215436.cam  screenshot-1426215461.cam  screenshot-1426215484.cam
src/agile_grasp/: antipodal.cpp  finger_hand.cpp  grasp_hypothesis.cpp  grasp_localizer.cpp  hand_search.cpp  handle.cpp  handle_search.cpp  learning.cpp  localization.cpp  plot.cpp  quadric.cpp  rotating_hand.cpp
src/nodes/: find_grasps.cpp  test.cpp  train.cpp
src/tests/: antipodal_test.cpp  hands_test.cpp  learning_test.cpp  opencv_test.cpp  test_local_axes.cpp  test_taubin.cpp
