<?xml version="1.0"?>
<package>
  <name>agile_grasp</name>
  <version>0.6.0</version>
  <description>The agile_grasp package. AGILE stands for Antipodal Grasp Identification and LEarning. The package finds 
  antipodal grasps in point clouds.</description>
  <maintainer email="atp@ccs.neu.edu">Andreas ten Pas</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/agile_grasp</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>   
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
